<resources>
    <string name="app_name">Zianbam - Scocialist community</string>
    <string name="facebook_app_id">341210813185698</string>
    <string name="fb_login_protocol_scheme">fb341210813185698</string>

    <!--custom  string-->
    <string name="hellowWorld">Hellow world</string>
    <string name="logOut">Logout</string>
    <string name="LoginWithGoogle">Continue with Google</string>
    <string name="LoginWithFacebook">Continue with Facebook</string>
    <string name="textemail">Email</string>
    <string name="textpassword">Password</string>
    <string name="textpasswordConfirm">Confirm Password</string>
    <string name="textsignin">Sign In </string>
    <string name="textSinginWithEmail">Signin with Email</string>
    <string name="textor">OR</string>
    <string name="textnext">Next</string>
    <string name="textSignup">Signup with email and passwword</string>
    <string name="alreadyhaveAccount">Already have an account?</string>
    <string name="textLogin">Log In</string>
    <string name="SignupwithFB">Signup with facebook</string>
    <string name="SignupwithGoogle">Signup with google</string>
    <string name="textSingupWithEmail">Signup with email</string>
    <string name="donthaveaccount">Don\'t have account?</string>
    <string name="createAccount">Create account</string>
    <string name="signupBtn">Sign Up</string>
    <string name="textAccountsetup">Account setup</string>
    <string name="textFullname">Full name</string>
    <string name="agreeterms">By clicking on any of this button you agree to our </string>
    <string name="textTermsNcon">Terms and conditions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zianbamtext">Zianbam</string>
    <string name="fullname_text">Full name</string>
    <string name="female_text">Female</string>
    <string name="show_text">show</string>


    <!-- font families from imagepicker-->
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="comments">Comments</string>
    <string name="type_in_your_comment">Type in your comment..</string>
    <string name="reply">Reply</string>
    <string name="username">username</string>
    <string name="notifications">Notifications</string>
    <string name="recentActivities">Recent activites</string>
    <string name="aboutme">About me: I like to read books befoore I go to bed and I also like to cook! I like outdours game too.</string>
    <string name="_0">0</string>


</resources>