<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:layout_centerInParent="true"
     android:orientation="vertical">


     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:srcCompat="@drawable/zianbam_logo"
         android:layout_marginBottom="50dp"
         />

     <EditText
         android:id="@+id/email_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:background="@drawable/editext_background1"
         android:hint="@string/textemail"
         android:maxLength="30"
         android:inputType="textEmailAddress"
         android:focusableInTouchMode="true"
        />

     <EditText
         android:id="@+id/pass1_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:background="@drawable/editext_background1"
         android:hint="@string/textpassword"
         android:maxLength="13"
         android:inputType="textPassword"
     />


     <EditText
         android:id="@+id/pass2_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/editext_background1"
         android:hint="@string/textpasswordConfirm"
         android:maxLength="13"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/signupBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_background_signin"
         android:textColor="@color/colorWhite"
         android:layout_marginTop="8dp"
         android:text="Sign Up"
        />


 </LinearLayout>
</RelativeLayout>